--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,15 +3,20 @@ owner: aymeric35 # Your GitHub organization or username, where this repository l
 repo: websites-monitoring # The name of this repository
 
 sites:
-  - name: My website
-    url: https://aymeric-bertrand.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: Mon site web
+    url: $MY_WEBSITE
+  - name: ACDS
+    url: $ACDS
+  - name: Hervé Maréchalerie
+    url: $MARECHALERIE
+  - name: Pizza restaurant
+    url: $PIZZA
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   # cname: demo.upptime.js.org
+  theme: dark
   baseUrl: /websites-monitoring
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
